# pomdp-solve

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
src/: Makefile.in  double-vector.c
src/laspack/: Makefile.in
src/lp-solve/: Makefile.in
src/mdp/: Makefile.in
testing/: Makefile.am  Makefile.in  double-vector-test.c  global-test.h  index-list-test.c  main-test.c
